    errors will be returned instead of raised if this is set to False.

    .. warning::

        You should increase the polling interval when using the
        database result backend, as frequent polling can result in high
        database load.

* The PID of the child worker process accepting a task is now sent as a field
  with the `task-started` event.

* For better accuracy the start time reported by the multiprocessing worker
  process is used when calculating task duration.

    Previously the time reported by the accept callback was used.

* `celerybeat`: New built-in daemonization support using the `--detach`
   option.

* `celeryev`: New built-in daemonization support using the `--detach`
   option.

* `TaskSet.apply_async`: Now supports custom publishers by using the
  `publisher` argument.

* Added :setting:`CELERY_SEND_TASK_SENT_EVENT` setting.

    If enabled an event will be sent with every task, so monitors can
    track tasks before the workers receive them.

* `celerybeat`: Now reuses the broker connection when applying
   scheduled tasks.

* The configuration module and loader to use can now be specified on
  the command line.

    For example::

        $ celeryd --config=celeryconfig.py --loader=myloader.Loader

* Added signals: `beat_init` and `beat_embedded_init`

    * :data:`celery.signals.beat_init`

        Dispatched when :program:`celerybeat` starts (either standalone or
        embedded).  Sender is the :class:`celery.beat.Service` instance.

    * :data:`celery.signals.beat_embedded_init`

        Dispatched in addition to the :data:`beat_init` signal when
        :program:`celerybeat` is started as an embedded process.  Sender
        is the :class:`celery.beat.Service` instance.

* Redis result backend: Removed deprecated settings `REDIS_TIMEOUT` and
  `REDIS_CONNECT_RETRY`.

* CentOS init script for :program:`celeryd` now available in `contrib/centos`.

.. _v220-fixes:

Fixes
-----
